grammar.js
    source_file: ($) => repeat($.statement),

    // comments

    line_comment: (_) => token(choice(/%[^*\n\r][^\n\r]*/, "%")),

    doc_comment: ($) =>
      seq(
        "%*!",
        ws_rgx,
        field("predicate", $.doc_predicate),
        // no doc_ws
        optional(field("description", $.doc_desc)),
        // no doc_ws
        optional(field("arguments", $.doc_args)),
        // no doc_ws
        token.immediate("*%"),
      ),

    // NOTE: gobbles up trailing whitespace
    variables: ($) =>
      seq(
        alias($.doc_var, $.variable),
        ws_rgx,
        repeat(
          seq(
            token.immediate(","),
            ws_rgx,
            alias($.doc_var, $.variable),
            ws_rgx,
          ),
        ),
      ),

    // NOTE: gobbles up trailing whitespace
    doc_predicate: ($) =>
      seq(
        field("name", alias(token.immediate(identifier_rgx), $.identifier)),
        ws_rgx,
        optional(
          seq(
            alias($._doc_token_paren, "("),
            ws_rgx,
            optional(seq(field("variables", $.variables))),
            // no doc_ws
            token.immediate(")"),
            ws_rgx,
          ),
        ),
      ),

    doc_args: ($) =>
      seq(alias($._doc_token_args, "Args:"), ws_rgx, repeat($.doc_arg)),
    // NOTE: gobbles up trailing whitespace
    doc_arg: ($) =>
      seq(
        alias($._doc_token_minus, "-"),
        ws_rgx,
        field("variable", alias($.doc_var, $.variable)),
        ws_rgx,
        token.immediate(":"),
        ws_rgx,
        optional(field("description", $.doc_desc)),
      ),

    // terms

    identifier: (_) => identifier_rgx,

    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($._string_fragment, $.string_fragment),
              alias($._string_escape, $.escape_sequence),
            ),
          ),
          '"',
        ),
      ),

    _string_fragment: (_) => token.immediate(prec(1, /[^"\\\x00]+/)),
    _string_escape: (_) => token.immediate(/\\[n"\\]/),
    number: (_) =>
      token(
        choice(
          choice("0", /([1-9][0-9]*)/),
          token(seq("0x", /([0-9A-Fa-f]+)/)),
          token(seq("0o", /([1-7]+)/)),
          token(seq("0b", /([0-1]+)/)),
        ),
      ),

    variable: (_) => variable_rgx,

    _const_term: ($) =>
      choice(
        $.infimum,
        $.supremum,
        $.number,
        $.string,
        alias($.const_binary_operation, $.binary_operation),
        alias($.const_unary_operation, $.unary_operation),
        alias($.const_abs, $.abs),
        alias($.const_function, $.function),
        alias($.const_tuple, $.tuple),
      ),

    binary_operation: ($) =>
      choice(
        binary_expression(0, $.term, "..", $.term),
        binary_expression(1, $.term, "^", $.term),
        binary_expression(1, $.term, "?", $.term),
        binary_expression(1, $.term, "&", $.term),
        binary_expression(2, $.term, "+", $.term),
        binary_expression(2, $.term, "-", $.term),
        binary_expression(3, $.term, "*", $.term),
        binary_expression(3, $.term, "/", $.term),
        binary_expression(3, $.term, "\\", $.term),
        binary_expression(-5, $.term, "**", $.term),
      ),

    unary_operation: ($) =>
      choice(
        unary_expression(4, "-", $.term),
        unary_expression(4, "~", $.term),
      ),

    abs: ($) => seq("|", $.term, repeat(seq(";", $.term)), "|"),

    terms: ($) => seq($.term, repeat(seq(",", $.term))),

    _arg_pool: ($) =>
      seq(
        "(",
        choice(
          field("arguments", optional(alias($._terms_or_projection, $.terms))),
          $._arg_pool_n,
        ),
        ")",
      ),

    function: ($) => seq(field("name", $.identifier), optional($._arg_pool)),

    _tuple_pool_n: ($) =>
      seq(
        choice(
          $.tuple_pool_item,
          alias($.empty_pool_item_first, $.empty_pool_item),
        ),
        repeat1(seq(";", choice($.tuple_pool_item, $.empty_pool_item))),
      ),

    tuple: ($) =>
      seq("(", choice(optional($.tuple_pool_item), $._tuple_pool_n), ")"),

    symbolic_atom: ($) => seq($.atom_identifier, optional($._arg_pool)),

    literal: ($) =>
      seq(
        optional(field("sign", $.literal_sign)),
        field("atom", $.simple_atom),
      ),

    // aggregates

    condition: ($) => seq($.literal, repeat(seq(",", $.literal))),

    _condition: ($) =>
      seq(alias($.colon, ":"), optional(field("condition", $.condition))),

    body_literal: ($) =>
      seq(
        optional(field("sign", $.literal_sign)),
        field(
          "atom",
          choice(
            $.set_aggregate,
            $.body_aggregate,
            $.sort_aggregate,
            $.theory_atom,
            $.simple_atom,
          ),
        ),
      ),

    _body_literal_sep: ($) =>
      choice(
        seq($.body_literal, choice(";", ",")),
        seq($.conditional_literal, ";"),
      ),

    body: ($) =>
      seq(
        repeat($._body_literal_sep),
        choice($.body_literal, $.conditional_literal),
      ),

    _colon_body: ($) =>
      seq(
        optional(seq(alias($.colon, ":"), optional(field("body", $.body)))),
        ".",
      ),

    // head literals

    rule: ($) =>
      seq(
        field("head", $.head),
        optional(seq(":-", field("body", $.body))),
        ".",
      ),

    integrity_constraint: ($) =>
      seq(":-", optional(field("body", $.body)), "."),

    _optimize_tuple: ($) => seq(",", $.terms),

    weight: ($) =>
      seq(field("term", $.term), optional(seq("@", field("priority", $.term)))),

    optimize_element: ($) =>
      seq(
        field("weight", $.weight),
        optional(field("terms", $._optimize_tuple)),
        optional($._condition),
      ),
    optimize_elements: ($) =>
      seq($.optimize_element, repeat(seq(";", $.optimize_element))),

    weak_constraint: ($) =>
      seq(
        ":~",
        optional(field("body", $.body)),
        ".",
        "[",
        field("weight", $.weight),
        optional(field("terms", $._optimize_tuple)),
        "]",
      ),

    maximize: ($) =>
      seq(
        choice("#maximize", "#maximise"),
        "{",
        optional(field("elements", $.optimize_elements)),
        "}",
        ".",
      ),

    minimize: ($) =>
      seq(
        choice("#minimize", "#minimise"),
        "{",
        optional(field("elements", $.optimize_elements)),
        "}",
        ".",
      ),

    signature: ($) => seq($.atom_identifier, "/", field("arity", $.number)),

    show: (_) => seq("#show", "."),

    show_term: ($) => seq("#show", field("term", $.term), $._colon_body),

    boolean: (_) => choice("true", "false"),

    show_signature: ($) =>
      seq(
        "#show",
        field("signature", $.signature),
        ".",
        optional(seq("[", field("value", $.boolean), "]")),
      ),

    defined: ($) => seq("#defined", field("signature", $.signature), "."),

    project_signature: ($) =>
      seq("#project", field("signature", $.signature), "."),

    project_atom: ($) =>
      seq("#project", field("atom", $.symbolic_atom), $._colon_body),

    parameters: ($) => seq($.identifier, repeat(seq(",", $.identifier))),

    program: ($) =>
      seq(
        "#program",
        field("name", $.identifier),
        optional(seq("(", optional(field("parameters", $.parameters)), ")")),
        ".",
      ),

    code: (_) =>
      token(repeat(choice(/[^#]/, /#[^e][^#]/, /#e[^n][^#]/, /#en[^d][^#]/))),

    script: ($) =>
      seq(
        "#script",
        "(",
        field("language", $.identifier),
        ")",
        field("code", $.code),
        "#end",
        ".",
      ),

    const_type: (_) => token(choice("default", "override")),

    const: ($) =>
      seq(
        "#const",
        field("name", $.identifier),
        "=",
        field("value", $._const_term),
        ".",
        optional(seq("[", field("type", $.const_type), "]")),
      ),

    edge_pair: ($) => seq($.term, ",", $.term),

    edge: ($) =>
      seq(
        "#edge",
        "(",
        field("edge_pair", $.edge_pair),
        repeat(seq(";", field("edge_pair", $.edge_pair))),
        ")",
        $._colon_body,
      ),

    heuristic: ($) =>
      seq(
        "#heuristic",
        field("atom", $.symbolic_atom),
        $._colon_body,
        "[",
        field("weight", $.weight),
        ",",
        field("type", $.term),
        "]",
      ),

    include: ($) =>
      seq("#include", choice($.string, seq("<", $.identifier, ">")), "."),

    external: ($) =>
      seq(
        "#external",
        field("atom", $.symbolic_atom),
        $._colon_body,
        optional(seq("[", field("type", $.term), "]")),
      ),
